--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <version>0.1.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.6.2.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
