--- a/src/main/resources/config/io.codeleaf.authn.jaxrs.AuthenticationConfiguration.json
+++ b/src/main/resources/config/io.codeleaf.authn.jaxrs.AuthenticationConfiguration.json
@@ -10,52 +10,15 @@
         }
       }
     },
-    "basic": {
+    "default": {
       "implementation": "io.codeleaf.authn.jaxrs.basic.BasicAuthenticator",
       "configuration": {
         "type": "io.codeleaf.authn.jaxrs.basic.BasicConfiguration",
         "settings": {
-          "passwordAuthenticator": "dummy"
+          "passwordAuthenticator": "dummy",
+          "form": "true"
         }
       }
-    },
-    "linkedin": {
-      "implementation": "io.codeleaf.authn.jaxrs.oauth.linkedin.LinkedInAuthenticator",
-      "configuration": {
-        "type": "io.codeleaf.authn.jaxrs.oauth.OAuthConfiguration",
-        "settings": {
-          "clientId": "<>",
-          "clientSecret": "<>",
-          "redirectUri": "http://codeleaf.com:8081/auth/linkedin",
-          "scope": "r_basicprofile w_share rw_company_admin w_member_social r_emailaddress",
-          "state": "some_params",
-          "landingPageUrl": "http://codeleaf.com"
-        }
-      }
-    }
-  },
-  "zones": {
-    "admin": {
-      "endpoints": [
-        "admin/*",
-        "admin"
-      ],
-      "authenticator": "linkedin",
-      "policy": "required"
-    },
-    "public": {
-      "endpoints": [
-        "public/*",
-        "public"
-      ],
-      "policy": "none"
-    },
-    "default": {
-      "endpoints": [
-        "hello"
-      ],
-      "authenticator": "basic",
-      "policy": "optional"
     }
   }
 }
